<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbUzbek"
            style="@style/LanguageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/text_uzbek" />

        <RadioButton
            android:id="@+id/rbEnglish"
            style="@style/LanguageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/text_english" />

        <RadioButton
            android:id="@+id/rbRussian"
            style="@style/LanguageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/text_russian" />
    </RadioGroup>

</LinearLayout>