<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.CardView.Elevated"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardBackgroundColor="?colorSurfaceContainerLowest"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivCurrencyImage"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:contentDescription="@string/text_currency_image"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCurrencyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/sfpro_display_bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/ivCurrencyImage"
            app:layout_constraintStart_toEndOf="@id/ivCurrencyImage"
            app:layout_constraintTop_toTopOf="@id/ivCurrencyImage" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSellingLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:fontFamily="@font/sfpro_display_medium"
            android:text="@string/text_selling"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvBuyingLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCurrencyImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSellingPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_display_bold"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/tvSellingLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSellingLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBuyingLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:alpha="0.7"
            android:fontFamily="@font/sfpro_display_medium"
            android:text="@string/text_buying"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/ivCalculator"
            app:layout_constraintStart_toEndOf="@id/tvSellingLabel"
            app:layout_constraintTop_toTopOf="@id/tvSellingLabel" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBuyingPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_display_bold"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/tvBuyingLabel"
            app:layout_constraintStart_toStartOf="@id/tvBuyingLabel"
            app:layout_constraintTop_toBottomOf="@id/tvBuyingLabel" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivCalculator"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?colorSurfaceContainerLow"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_calculator"
            app:contentPadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvBuyingLabel"
            app:shapeAppearance="@style/CircleShapeableImage" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>