<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardConverter"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="?colorSurfaceContainerLowest"
        app:contentPadding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent="0.85">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/topCurrencySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/ivConverter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <EditText
                android:id="@+id/edtAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_attach_money_24"
                android:fontFamily="@font/sfpro_display_medium"
                android:hint="@string/text_00_00"
                android:importantForAutofill="no"
                android:inputType="number"
                android:paddingVertical="16dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/ivConverter"
                app:layout_constraintTop_toBottomOf="@id/topCurrencySpinner"
                app:layout_constraintVertical_bias="0.3" />

            <ImageView
                android:id="@+id/ivConverter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_converter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Spinner
                android:id="@+id/bottomCurrencySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/tvSellingLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivConverter" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSellingLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:fontFamily="@font/sfpro_display_medium"
                android:text="@string/text_selling"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvBuyingLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivConverter"
                app:layout_constraintVertical_bias="0.7" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSellingPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/sfpro_display_bold"
                android:maxLines="1"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/tvSellingLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSellingLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvBuyingLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:fontFamily="@font/sfpro_display_medium"
                android:text="@string/text_buying"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvSellingLabel"
                app:layout_constraintTop_toTopOf="@id/tvSellingLabel" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvBuyingPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/sfpro_display_bold"
                android:maxLines="1"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/tvBuyingLabel"
                app:layout_constraintStart_toStartOf="@id/tvBuyingLabel"
                app:layout_constraintTop_toBottomOf="@id/tvBuyingLabel" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:background="?colorOutlineVariant"
                app:layout_constraintBottom_toBottomOf="@id/ivConverter"
                app:layout_constraintEnd_toStartOf="@id/ivConverter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivConverter" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:background="?colorOutlineVariant"
                app:layout_constraintBottom_toBottomOf="@id/ivConverter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivConverter"
                app:layout_constraintTop_toTopOf="@id/ivConverter" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfpro_display_bold"
        android:paddingVertical="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cardConverter"
        app:layout_constraintStart_toStartOf="@id/cardConverter"
        app:layout_constraintTop_toBottomOf="@id/cardConverter"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cut_corners_background"
        android:fontFamily="@font/sfpro_display_bold"
        android:hint="@string/text_result_will_be_here"
        android:padding="16dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cardConverter"
        app:layout_constraintStart_toStartOf="@id/cardConverter"
        app:layout_constraintTop_toBottomOf="@id/cardConverter"
        app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>